--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,5 +5,5 @@
           data-bs-toggle="popover" 
           title="Popover title" 
           data-bs-content="And here's some amazing content. It's very engaging. Right?">
-              Click to toggle popover
+              Click to toggle popover again ?
 </button> 
