--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= vite_client_tag %>
     <%= vite_javascript_tag 'application' %>
     <%= vite_stylesheet_tag 'application' %>
+    <%= vite_stylesheet_tag 'theme.scss' %>
     <!--
       If using a TypeScript entrypoint file:
         vite_typescript_tag 'application'
